--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "gulp-imagemin": "^2.3.0",
     "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
+    "gulp-uglify-es": "^1.0.4",
     "gulp-useref": "^3.0.4",
+    "jshint": "^2.9.6",
     "run-sequence": "^1.1.2"
   }
 }
