--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.1",
+    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
+    "gulp-jshint": "^2.1.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^3.0.0",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-sourcemaps": "^1.12.1",
     "gulp-uglify-es": "^1.0.4",
     "gulp-useref": "^3.0.4",
     "jshint": "^2.9.6",
+    "jshint-stylish": "^2.2.1",
     "run-sequence": "^1.1.2"
   }
 }
